ref: Rename Repository schema to new convention
